sumo/tests/sumo/errors/network/junction/root__junction#type__ungiven1/errors.sumo
Error: Missing attribute in junction '1'.
 Can not build according junction.
Quitting (on error).
